# data-driven-national-insurance

./: .gitignore  .ocamlinit  NIC_test_data_v2.0.xml  calc.mli  dune  dune-project  equation-inspector.py  expr.ml  json_lexer.mll  json_parser.mly  json_parser_main.ml  lexer.mll  mfcalc.mly  ni_calc_json.ml  ni_calc_main.ml  ni_calc_main.opam  ni_calc_types.mli  ni_test_data.ml  ni_test_parser.ml  nics-schema.json  nics-specification.json  pattern-tester.py  upload.sh
